<resources>
    <string name="app_name">InventoryApp</string>
    <string name="book_name">Book Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="editor_activity">Editor Activity</string>
</resources>
